# pcg-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
include/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
sample/: CMakeLists.txt  codebook.cpp  cppref-sample.cpp  make-partytrick.cpp  pcg-demo.cpp  spew.cpp  use-partytrick.cpp
test-high/: CMakeLists.txt  pcg-test-noadvance.cpp  pcg-test.cpp  run-tests.sh
